<resources>
    <string name="app_name">Frankenstory</string>
    <string name="url_server">https://mooncode-frankenstory-dev.herokuapp.com/api</string>
    <string name="createAccount"> CREAR CUENTA </string>
    <string name="insertUserName">Nombre de usuario</string>
    <string name="insertPassWord">Contraseña</string>
    <string name="insertPassWordAgain">Repita la contraseña</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="no_name">Nombre</string>
    <string name="no_points">0</string>
    <string name="statistics">Estadísticas</string>
    <string name="friends">Amig@s</string>
    <string name="House">Casa</string>
    <string name="your_stories">Tus historias</string>
    <string name="quick_game">Partida rápida</string>
    <string name="create_room">CREAR SALA</string>
    <string name="join_room">UNIRSE A SALA</string>
    <string name="random_game">PARTIDA ALEATORIA</string>
    <string name="code">Código #XXXX</string>
    <string name="write_time">Tiempo de escritura</string>
    <string name="game_type">Tipo de partida</string>
    <string name="gamemode">Modo de juego</string>
    <string name="random_words">PALABRAS\nOBLIGATORIAS</string>
    <string name="twitter_trend">TENDENCIAS\nTWITTER</string>
    <string name="private_game">Partida privada</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="settings">Ajustes</string>
    <string name="change_pass">Cambiar contraseña</string>
    <string name="elminate_acc">Eliminar cuenta</string>
    <string name="search_friends">Buscar amig@s</string>
    <string name="petitions">Peticiones</string>
    <string name="add_friends">Añadir</string>
    <string name="refuse_friend">Rechazar</string>
    <string name="story">Modo relato</string>
    <!-- https://www.codetable.net/unicodecharacters?page=33 -->
    <string name="my_games">Mis partidas</string>
    <string name="my_games_opened">Mis partidas ▾</string>
    <string name="my_games_closed">Mis partidas ▸</string>
    <string name="friend_games">Partidas de amig@s</string>
    <string name="friend_games_opened">Partidas de amig@s ▾</string>
    <string name="friend_games_closed">Partidas de amig@s ▸</string>
    <string name="public_games">Partidas públicas</string>
    <string name="public_games_opened">Partidas públicas ▾</string>
    <string name="public_games_closed">Partidas públicas ▸</string>
    <string name="no_voted">Partidas en votación</string>
    <string name="no_voted_opened">Partidas en votación ▾</string>
    <string name="no_voted_closed">Partidas en votación ▸</string>
    <string name="create_sotry">Crear relato</string>
    <string name="my_stories">Biblioteca</string>
    <string name="story_content">Contenido historia</string>
    <string name="start_game">Empezar partida</string>
    <string name="participants">0/10 Participantes</string>
    <string name="code_room">CODIGO DE SALA: #000000</string>
    <string name="mode_twitter">MODO TENDENCIAS TWITTER</string>
    <string name="mode_random_words">MODO PALABRAS ALEATORIAS</string>
    <string name="start_story">Crear relato</string>
    <string name="writings">Número de escrituras</string>
    <string name="length">Número de caracteres</string>
    <string name="story_name">Título del relato</string>
    <string name="finish_story">TERMINAR</string>
    <string name="finish_game">TERMINAR HISTORIA</string>
    <string name="finish_text">ENVIAR</string>
    <string name="write">Escribe tu párrafo</string>
    <string name="change_icon">CAMBIAR ICONO</string>
    <string name="close_session">CERRAR SESIÓN</string>
    <string name="eliminate_account">ELIMINAR CUENTA</string>
    <string name="your_friends">Tus amig@s</string>
    <string name="story_begins">Comienza la historia…</string>
    <string name="story_theme">TEMA DE LA HISTORIA</string>
    <string name="votations">VOTACIONES</string>
    <string name="vote">VOTAR</string>
    <string name="next">SIGUIENTE</string>
    <string name="score">PUNTUACIÓN</string>
    <string name="clasification">Clasificación</string>
    <string name="previous_text">Párrafo anterior</string>
    <string name="words_to_write">PALABRAS A INTRODUCIR</string>
    <string name="choose"> ELIGE EL PÁRRAFO QUE MÁS TE GUSTE  </string>
    <string name="spaces">0/10</string>
    <string name="voted">Esperando…</string>
</resources>
