<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">
            <!---TOP-->
            <include layout="@layout/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="80dp"
                android:layout_marginHorizontal="50dp"
                tools:ignore="UseSwitchCompatOrMaterialXml">
                <!--Tiempo de escritura-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial_bold"
                    android:shadowColor="@color/verde_letras"
                    android:shadowDx="6"
                    android:shadowDy="6"
                    android:shadowRadius="1"
                    android:text="@string/write_time"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
                <!--Tipo de partida-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial_bold"
                    android:shadowColor="@color/verde_letras"
                    android:shadowDx="6"
                    android:shadowDy="6"
                    android:shadowRadius="1"
                    android:layout_marginTop="100dp"
                    android:text="@string/game_type"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
                    <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/private_game"
                        android:textColor="@color/white"
                        android:textSize="20sp" >
                    </TextView>
                    <Switch
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </Switch>
                </LinearLayout>
                <!--Modo de juego-->
                 <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial_bold"
                    android:shadowColor="@color/verde_letras"
                    android:shadowDx="6"
                    android:shadowDy="6"
                    android:shadowRadius="1"
                    android:layout_marginTop="70dp"
                    android:text="@string/gamemode"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </LinearLayout>
            <!---BUTTONS MODE-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="400dp"
                android:layout_marginBottom="130dp"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/story_game_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/random_words_button"
                    android:text="@string/random_words"
                    android:textSize="25sp"
                    android:fontFamily="@font/bangers_regular"
                    android:textColor="@color/white"
                    android:gravity="bottom"
                    android:paddingBottom="40dp"
                    android:paddingStart="18dp"
                    android:singleLine="true"
                    tools:ignore="RtlSymmetry">
                </Button>
                <Button
                    android:id="@+id/quick_game_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/twitter_trend_button"
                    android:text="@string/twitter_trend"
                    android:textSize="24sp"
                    android:fontFamily="@font/bangers_regular"
                    android:textColor="@color/white"
                    android:gravity="bottom"
                    android:paddingBottom="40dp"
                    android:paddingStart="12dp"
                    android:singleLine="true"
                    tools:ignore="RtlSymmetry">
                </Button>
            </LinearLayout>
            <!--Crear sala-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="400dp"
                android:gravity="center_horizontal|bottom"
                android:paddingBottom="20dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="100dp"
                    android:fontFamily="@font/bangers_regular"
                    android:text="@string/create_room"
                    android:textColor="@color/white"
                    android:textSize="27sp"
                    android:background="@drawable/button_ingame" />
            </LinearLayout>
        </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
