<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:id="@+id/layoutmain">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">
            <!---Parte superior-->
            <include layout="@layout/top2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="70dp"
                android:layout_marginHorizontal="40dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arial_bold"
                    android:shadowColor="@color/verde_letras"
                    android:shadowDx="5"
                    android:shadowDy="5"
                    android:shadowRadius="1"
                    android:text="@string/quick_game"
                    android:textColor="@color/white"
                    android:textSize="35sp" />
                <!---Boton Partida Rápida-->
                <Button
                    android:id="@+id/quick_game"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:fontFamily="@font/bangers_regular"
                    android:text="@string/create_room"
                    android:gravity="left|bottom"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:textSize="32sp"
                    android:shadowColor="#329272"
                    android:shadowDy="5"
                    android:shadowDx="4"
                    android:shadowRadius="1"
                    android:background="@drawable/button_green_quick" />
                <!--Codigo -->
                <EditText
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/rounded_edittext_line"
                    android:fontFamily="@font/arial_regular"
                    android:hint="@string/code"
                    android:inputType="text"
                    android:paddingStart="12dp"
                    android:textSize="15sp"
                    tools:ignore="RtlSymmetry" />
                <!---Boton Unirse a sala-->
                <Button
                    android:id="@+id/join_room"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:fontFamily="@font/bangers_regular"
                    android:text="@string/join_room"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:gravity="left|bottom"
                    android:textSize="32sp"
                    android:shadowColor="#329272"
                    android:shadowDy="5"
                    android:shadowDx="4"
                    android:shadowRadius="1"
                    android:background="@drawable/button_green_quick" />
                <!---Boton Partida aleatoria-->
                <Button
                    android:id="@+id/random_game"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:fontFamily="@font/bangers_regular"
                    android:text="@string/random_game"
                    android:textColor="@color/white"
                    android:layout_marginTop="75dp"
                    android:gravity="left|bottom"
                    android:textSize="32sp"
                    android:shadowColor="#329272"
                    android:shadowDy="5"
                    android:shadowDx="4"
                    android:shadowRadius="1"
                    android:background="@drawable/button_green_quick" />
            </LinearLayout>
            <!---Parte inferior-->
            <include
                layout="@layout/bottom_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

</RelativeLayout>
